# scapi

./: .gitignore  .readthedocs.yaml  README.md  changelog.md  crowdin.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: crowdin.yml  crowdin_download.yml  main.yml  pypi.yml  upload.yml
docs/: 404.html  CNAME  _config.yml  changelog.rst  conf.py  en.md  index.md  index.rst  migrating.rst  warning.rst
docs/en/: download.md
docs/ja/: cloud.md  download.md  migration.md  quickstart.md  sites.md  update.md
docs/reference/: cloud.rst  editor.rst  error.rst  event.rst  index.rst  sites.rst  utils.rst
docs/tutorial/: 1_install.rst  2_async.rst  3_first-scapi.rst  index.rst
scapi/: __init__.py  __main__.py
scapi/cli/: __init__.py
scapi/cli/cmd/: __init__.py  account.py  proxy.py
scapi/cli/utils/: asyncwrapper.py  common.py  config.py  database.py  error.py  middleware.py  state.py
scapi/cloud/: cloud.py  cloud_event.py
scapi/editor/: __init__.py  asset.py  base.py  block.py  comment.py  common.py  info.py  monitor.py  project.py  sb.py  sb3.py  sprite.py  types.py  variable.py
scapi/event/: base.py  cloud.py  comment.py  message.py  temporal.py
scapi/others/: client.py  common.py  error.py  file.py  requests.py  types.py
scapi/sites/: activity.py  asset.py  base.py  classroom.py  comment.py  forum.py  mainpage.py  other.py  project.py  session.py  studio.py  user.py
scapi/utils/: activity_types.py  client.py  common.py  config.py  error.py  file.py  types.py
web/: _config.yml  en.md  index.md
web/ja/: async.md  event.md  sites.md
(+21 files in other folders)
